# tos

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  Cargo.toml  LICENSE  Makefile  README.md  qemu_run.sh  run.sh
.cargo/: config
boot/: bootsect.asm  gdt.asm  switch_pm.asm
cmake/: cmake_toolchain.cmake
common/: types.h
cpu/: idt.c  idt.h  interrupt.asm  isr.c  isr.h
data/font/: README.md
drivers/: port.c  port.h  screen.c  screen.h
kernel/: ConsoleDisplay.h  FrameBuffer.cpp  FrameBuffer.h  PITTimer.cpp  PITTimer.h  Timer.cpp  Timer.h  VBEConsoleDisplay.cpp  VBEConsoleDisplay.h  VGAConsoleDisplay.cpp  VGAConsoleDisplay.h  acpi_driver.cpp  acpi_driver.h  boot.S  boot.asm  cpuid.cpp  cpuid.h  cxxabi.cpp  cxxabi.h  gdt.asm  gdt.cpp  gdt.h  grub.cfg  idt.asm  idt.cpp  idt.h  isr.cpp  isr.h  kernel.c  kernel.cpp  kpanic.cpp  kpanic.h  kprintf.cpp  kprintf.h  linker.ld  memory.cpp  memory.h  multiboot.h  nop.h  paging.asm  (+18 more)
libc/: CMakeLists.txt  atomic.h  ctype.cpp  ctype.h  errno.h  kernel.h  sched.h  spinlock_types.h  stdio.cpp  stdio.h  stdlib.h  string.cpp  string.h
script/: run_qemu.sh
src/: main.rs  vga_buffer.rs
test/: CMakeLists.txt  interrupt_test.h  kernel_test.cpp  kernel_test.h  malloc_test.h  pit_test.h
toolchain/i386-elf/lib/ldscripts/: elf_i386.x  elf_i386.xbn  elf_i386.xc  elf_i386.xce  elf_i386.xd  elf_i386.xdc  elf_i386.xdce  elf_i386.xde  elf_i386.xdw  elf_i386.xdwe  elf_i386.xe  elf_i386.xn  elf_i386.xs  elf_i386.xsc  elf_i386.xsce  elf_i386.xse  elf_i386.xsw  elf_i386.xswe  elf_i386.xw  elf_i386.xwe  elf_iamcu.x  elf_iamcu.xbn  elf_iamcu.xc  elf_iamcu.xce  elf_iamcu.xd  elf_iamcu.xdc  elf_iamcu.xdce  elf_iamcu.xde  elf_iamcu.xdw  elf_iamcu.xdwe  elf_iamcu.xe  elf_iamcu.xn  elf_iamcu.xs  elf_iamcu.xsc  elf_iamcu.xsce  elf_iamcu.xse  elf_iamcu.xsw  elf_iamcu.xswe  elf_iamcu.xw  elf_iamcu.xwe
toolchain/include/gdb/: jit-reader.h
toolchain/lib/gcc/i386-elf/6.5.0/include/: adxintrin.h  ammintrin.h  avx2intrin.h  avx512bwintrin.h  avx512cdintrin.h  avx512dqintrin.h  avx512erintrin.h  avx512fintrin.h  avx512ifmaintrin.h  avx512ifmavlintrin.h  avx512pfintrin.h  avx512vbmiintrin.h  avx512vbmivlintrin.h  avx512vlbwintrin.h  avx512vldqintrin.h  avx512vlintrin.h  avxintrin.h  bmi2intrin.h  bmiintrin.h  bmmintrin.h  clflushoptintrin.h  clwbintrin.h  clzerointrin.h  cpuid.h  cross-stdarg.h  emmintrin.h  f16cintrin.h  float.h  fma4intrin.h  fmaintrin.h  fxsrintrin.h  ia32intrin.h  immintrin.h  iso646.h  lwpintrin.h  lzcntintrin.h  mm3dnow.h  mm_malloc.h  mmintrin.h  mwaitxintrin.h  (+30 more)
toolchain/lib/gcc/i386-elf/6.5.0/install-tools/: macro_list  mkheaders.conf
toolchain/lib/gcc/i386-elf/6.5.0/plugin/: gtype.state
toolchain/lib/gcc/i386-elf/6.5.0/plugin/include/: addresses.h  alias.h  alloc-pool.h  ansidecl.h  asan.h  attribs.h  auto-host.h  auto-profile.h  b-header-vars  backend.h  basic-block.h  bb-reorder.h  bitmap.h  builtin-attrs.def  builtin-types.def  builtins.def  builtins.h  bversion.h  c-tree.h  calls.h  ccmp.h  cfg-flags.def  cfg.h  cfganal.h  cfgbuild.h  cfgcleanup.h  cfgexpand.h  cfghooks.h  cfgloop.h  cfgloopmanip.h  cfgrtl.h  cgraph.h  chkp-builtins.def  cif-code.def  cilk-builtins.def  cilk.h  cilkplus.def  collect-utils.h  collect2-aix.h  collect2.h  (+299 more)
toolchain/lib/gcc/i386-elf/6.5.0/plugin/include/c-family/: c-common.def  c-common.h  c-objc.h  c-pragma.h  c-pretty-print.h
toolchain/lib/gcc/i386-elf/6.5.0/plugin/include/config/: dbxelf.h  elfos.h  initfini-array.h  newlib-stdint.h  vxworks-dummy.h
toolchain/lib/gcc/i386-elf/6.5.0/plugin/include/config/i386/: att.h  i386-opts.h  i386-protos.h  i386.h  i386elf.h  stringop.def  unix.h  x86-tune.def
toolchain/lib/gcc/i386-elf/6.5.0/plugin/include/cp/: cp-tree.def
toolchain/lib/gcc/i386-elf/6.5.0/plugin/include/java/: java-tree.def
toolchain/lib/gcc/i386-elf/6.5.0/plugin/include/objc/: objc-tree.def
toolchain/libexec/gcc/i386-elf/6.5.0/: cc1  collect2  liblto_plugin.la  liblto_plugin.so.0.0.0  lto-wrapper  lto1
toolchain/libexec/gcc/i386-elf/6.5.0/install-tools/: fixincl  mkheaders
toolchain/libexec/gcc/i386-elf/6.5.0/plugin/: gengtype
toolchain/share/gdb/syscalls/: aarch64-linux.xml  amd64-linux.xml  arm-linux.xml  freebsd.xml  gdb-syscalls.dtd  i386-linux.xml  mips-n32-linux.xml  mips-n64-linux.xml  mips-o32-linux.xml  ppc-linux.xml  ppc64-linux.xml  s390-linux.xml  s390x-linux.xml  sparc-linux.xml  sparc64-linux.xml
toolchain/share/gdb/system-gdbinit/: elinos.py  wrs-linux.py
toolchain/share/info/: annotate.info  as.info  bfd.info  binutils.info  cpp.info  cppinternals.info  dir  gcc.info  gccinstall.info  gccint.info  gdb.info  gprof.info  ld.info  stabs.info
toolchain/share/locale/de/LC_MESSAGES/: opcodes.mo
toolchain/share/locale/es/LC_MESSAGES/: bfd.mo  opcodes.mo
toolchain/share/locale/fr/LC_MESSAGES/: bfd.mo  opcodes.mo
toolchain/share/locale/pt/LC_MESSAGES/: bfd.mo
toolchain/share/locale/pt_BR/LC_MESSAGES/: opcodes.mo
toolchain/share/locale/ru/LC_MESSAGES/: bfd.mo
toolchain/share/locale/sr/LC_MESSAGES/: bfd.mo  opcodes.mo
toolchain/share/locale/sv/LC_MESSAGES/: opcodes.mo
toolchain/share/locale/uk/LC_MESSAGES/: bfd.mo  opcodes.mo
toolchain/share/man/man1/: i386-elf-addr2line.1  i386-elf-ar.1  i386-elf-as.1  i386-elf-c++filt.1  i386-elf-cpp.1  i386-elf-dlltool.1  i386-elf-elfedit.1  i386-elf-gcc.1  i386-elf-gcov-dump.1  i386-elf-gcov-tool.1  i386-elf-gcov.1  i386-elf-gdb-add-index.1  i386-elf-gdb.1  i386-elf-gdbserver.1  i386-elf-gprof.1  i386-elf-ld.1  i386-elf-nm.1  i386-elf-objcopy.1  i386-elf-objdump.1  i386-elf-ranlib.1  i386-elf-readelf.1  i386-elf-size.1  i386-elf-strings.1  i386-elf-strip.1  i386-elf-windmc.1  i386-elf-windres.1
toolchain/share/man/man5/: i386-elf-gdbinit.5
toolchain/share/man/man7/: fsf-funding.7  gfdl.7  gpl.7
toolchain/src/: build.sh
